kubernetes/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamwizard-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: streamwizard-frontend
  template:
    metadata:
      labels:
        app: streamwizard-frontend
    spec:
      containers:
      - name: streamwizard-frontend
        image: ghcr.io/streamerbuddybot/test:5921f03b44d352b9d24e9f98d7224b38e55fe3b5
        ports:
        - containerPort: 3000
